--- a/mb_crm_fsm/views/crm_views.xml
+++ b/mb_crm_fsm/views/crm_views.xml
@@ -6,7 +6,7 @@
 			<field name="inherit_id" ref="crm.crm_lead_view_form"/>
 			<field name="arch" type="xml">
 				<xpath expr="//form//header" position="inside">
-					<button name="%(mb_crm_fsm.crm_fsm_wizard_action)d" context="{'default_lead_id': active_id}" type="action" string="Create Field Service"/>
+					<button name="%(mb_crm_fsm.crm_fsm_wizard_action)d" context="{'default_lead_id': active_id}" type="action" string="Create Survey" groups="mb_crm_fsm.group_crm_create_survey"/>
 				</xpath>
 				
 				<xpath expr="//div[@name='button_box']" position="inside">
