--- a/mb_crm_fsm/wizard/crm_fsm_wizard_view.xml
+++ b/mb_crm_fsm/wizard/crm_fsm_wizard_view.xml
@@ -11,7 +11,7 @@
                     <field name="company_id" invisible="1" />
                 </group>
                 <footer>
-                    <button name="create_fsm" string="Ceate Field Service" type="object" class="btn-primary" data-hotkey="q"/>
+                    <button name="create_fsm" string="Ceate" type="object" class="btn-primary" data-hotkey="q"/>
                     <button special="cancel" string="Cancel" class="btn-secondary"/>
                 </footer>
             </form>
